# flutter_zoom_sdk

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  (+4 more)
windows/: .gitignore  CMakeLists.txt  flutter_zoom_sdk_plugin.cpp  flutter_zoom_sdk_plugin.h  flutter_zoom_sdk_plugin_c_api.cpp
windows/h/: auth_service_interface.h  customized_resource_helper_interface.h  direct_share_helper_interface.h  meeting_service_interface.h  network_connection_handler_interface.h  notification_service_interface.h  presence_helper_interface.h  setting_service_interface.h  ui_hook_interface.h  zoom_sdk.h  zoom_sdk_def.h  zoom_sdk_ext.h  zoom_sdk_sms_helper_interface.h  zoom_sdk_util_define.h
windows/h/customized_ui/: customized_annotation.h  customized_immersive.h  customized_immersive_container.h  customized_local_recording.h  customized_share_render.h  customized_ui_mgr.h  customized_video_container.h  zoom_customized_ui.h
windows/h/meeting_service_components/: meeting_aan_interface.h  meeting_ai_companion_interface.h  meeting_annotation_interface.h  meeting_audio_interface.h  meeting_breakout_rooms_interface_v2.h  meeting_chat_interface.h  meeting_closedcaption_interface.h  meeting_configuration_interface.h  meeting_docs_interface.h  meeting_emoji_reaction_interface.h  meeting_h323_helper_interface.h  meeting_indicator_interface.h  meeting_inmeeting_encryption_interface.h  meeting_interpretation_interface.h  meeting_live_stream_interface.h  meeting_participants_ctrl_interface.h  meeting_phone_helper_interface.h  meeting_polling_ctrl_interface.h  meeting_production_studio_ctrl_interface.h  meeting_qa_ctrl_interface.h  meeting_raw_archiving_interface.h  meeting_recording_interface.h  meeting_reminder_ctrl_interface.h  meeting_remote_ctrl_interface.h  meeting_remote_support_interface.h  meeting_sharing_interface.h  meeting_sign_interpretation_interface.h  meeting_smart_summary_interface.h  meeting_ui_ctrl_interface.h  meeting_video_interface.h  (+3 more)
windows/lib/: sdk.lib
windows/zoom_bin/: mute.pcm  percussion.pcm  percussion_pause.pcm  ring_spatial.pcm  unmute.pcm  zoom.manifest
(+72 files in other folders)
